--- a/src/homepage/style.css
+++ b/src/homepage/style.css
@@ -1,17 +1,12 @@
-@media only screen and (max-width:739px){
-    .home_wrap{
-        padding:0 2rem;
-    }
-}
 .home_top_container{
-    margin-top: 3rem;
+    margin-top: 4rem;
 }
 .home_top-title{
     width: 100%;
     color: rgba(0,0,0,0.7);
     margin-bottom: 2rem;
     text-transform: uppercase;
-    font-size: 1.4rem;
+    font-size: 1.25rem;
 }
 .swiper-button-prev{
     width: 3rem !important;
@@ -42,4 +37,14 @@
     border-top: 1.8rem solid transparent;
 	border-right: 1.8rem solid #FF8A00;
 	border-bottom: 1.8rem solid transparent;
+}
+.home_top-title-2{
+    margin-top: 4rem;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color:rgba(0,0,0,0.7);
+    margin-bottom: 2rem;
+}
+.home_container{
+    padding:0 1rem;
 }
