--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -10,7 +10,7 @@
 }
 .login_wrap{
     width: 40%;
-    padding:2rem;
+    padding:3rem;
     background-color: white;
     border-radius: 8rem;
     box-shadow: 0 0 0.2rem 0.1rem rgba(0,0,0,0.7);
@@ -74,4 +74,28 @@
 }
 .login_button_container > button:hover{
     transform: scale(1.1);
+}
+.login_app_container{
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+}
+#loginGoogle{
+    max-width: 45%;
+}
+#loginFacebook{
+    max-width: 45%;
+}
+#loginFacebook > button{
+    width: 100%;
+    height: 3.2rem;
+    margin-left: 1rem;
+    background-color: #0E8DF2;
+    color:white;
+    cursor: pointer;
+    border:none;
+    border-radius: 0.2rem;
+    padding:0 1rem;
+    font-size: 1.3rem;
+    font-weight: 450;
 }
