--- a/src/swiper/style.css
+++ b/src/swiper/style.css
@@ -9,6 +9,10 @@
     width: 100%;
     height: 23rem;
     object-fit: cover;
+    transition: all ease 0.15s;
+}
+.swiper_card_wrap > img:hover{
+    transform: scale(1.13);
 }
 .swiper_card-infor_container{
     position: absolute;
