--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -1,54 +1,71 @@
 .login_container{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url("https://res.cloudinary.com/sttruyen/image/upload/v1669036421/Sttruyen/IGEQ_aoejzw.gif");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     display: flex;
     align-items: center;
     justify-content: center;
+    color:white;
+    background-color: #3BA2CB;
+    background-position: center;
 }
 .login_wrap{
     width: 40%;
     padding:3rem;
-    background-color: white;
+    background-color: transparent;
     border-radius: 8rem;
     box-shadow: 0 0 0.2rem 0.1rem rgba(0,0,0,0.7);
+    border:0.1rem solid white;
 }
 
 .login_title{
     text-align: center;
     text-transform: uppercase;
     font-size: 1.3rem;
-    color:rgba(0,0,0,0.7);
+    color:white;
     margin-bottom: 4rem;
 }
 .login_input_container{
     display: flex;
     justify-content: center;
     margin-bottom: 3rem;
+    flex-wrap: wrap;
     align-items: center;
     font-weight: 600;
+    padding:0 15%;
 }
 .login_input_container > label{
-    width: 15%;
+    width: 100%;
     font-size: 1.8rem;
+    padding-left:2%;
 }
 .login_input_container > input{
-    width: 60%;
+    width: 100%;
     height: 6rem;
     border-radius: 5rem;
     padding:0 1rem;
     outline: none;
     font-size: 1.5rem;
+    background-color: transparent;
+    margin-top: 0.8rem;
+    color:white;
+}
+.login_input_container > input::placeholder{
+    color:white;
 }
 @media only screen and (max-width:739px){
     .login_wrap{
-        width: 80%;
+        width: 90%;
+    }
+    .login_input_container{
+        padding:0 5%;
     }
     .login_input_container > label{
-        width: 25%;
+        width: 100%;
         font-size: 1.8rem;
+        padding-left:2%;
     }
 }
 @media only screen and (min-width:740px) and (max-width:1024px){
@@ -79,12 +96,7 @@
     margin-top: 2rem;
     display: flex;
     justify-content: center;
-}
-#loginGoogle{
-    max-width: 45%;
-}
-#loginFacebook{
-    max-width: 45%;
+    flex-wrap: wrap;
 }
 #loginFacebook > button{
     width: 100%;
@@ -97,5 +109,25 @@
     border-radius: 0.2rem;
     padding:0 1rem;
     font-size: 1.3rem;
-    font-weight: 450;
+    font-family: 'Poppins', sans-serif;
+}
+#loginGoogle{
+    margin-bottom: 1rem;
+}
+.login_forgotPassword{
+    display: flex;
+    justify-content: center;
+    margin:2rem 0;
+}
+.forgotPassword{
+    color:red;
+    font-size: 1.5rem;
+}
+.login_register{
+    font-size: 1.5rem;
+    margin:2rem 0;
+    text-align: center;
+}
+.login_register_button{
+    margin-left: 0.5rem;
 }
