--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -15,12 +15,14 @@
     width: 100%;
     height: 100%;
     display: flex;
+
     align-items: center;
     justify-content: flex-end;
+    font-family: 'Noto Sans', sans-serif;
 }
 .auth_link{
     text-decoration: none;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     color:white;
     font-weight: 700;
     margin-left: 1rem;
