--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -77,7 +77,7 @@
     text-align: center;
 }
 .login_button_container > button{
-    width: 30%;
+    padding:0 3rem;
     height: 5rem;
     border-radius: 5rem;
     outline: none;
@@ -100,16 +100,17 @@
 }
 #loginFacebook > button{
     width: 100%;
-    height: 3.2rem;
+    height: 3.4rem;
     margin-left: 1rem;
     background-color: #0E8DF2;
     color:white;
     cursor: pointer;
     border:none;
-    border-radius: 0.2rem;
+    border-radius: 0.5rem;
     padding:0 1rem;
     font-size: 1.3rem;
     font-family: 'Poppins', sans-serif;
+    box-shadow:0 0 0.005rem 0.1rem rgba(255,255,255,0.2);
 }
 #loginGoogle{
     margin-bottom: 1rem;
@@ -130,4 +131,12 @@
 }
 .login_register_button{
     margin-left: 0.5rem;
+}
+.Login_another{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+#login_google{
+    margin-bottom: 1rem;
 }
