--- a/src/comment/style.css
+++ b/src/comment/style.css
@@ -19,6 +19,7 @@
     outline: none;
     padding:0.8rem;
     resize: vertical;
+    border-radius: 0.5rem;
 }
 .comment_items{
     margin-top: 1rem;
