--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 html{
     box-sizing: border-box;
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 @media only screen and (max-width:739px){
   html{
