--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -13,7 +13,7 @@
 }
 .login_wrap{
     width: 40%;
-    padding:3rem;
+    padding:1.5rem;
     background-color: transparent;
     border-radius: 8rem;
     box-shadow: 0 0 0.2rem 0.1rem rgba(0,0,0,0.7);
@@ -25,12 +25,12 @@
     text-transform: uppercase;
     font-size: 1.3rem;
     color:white;
-    margin-bottom: 4rem;
+    margin-bottom: 1.5rem;
 }
 .login_input_container{
     display: flex;
     justify-content: center;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
     flex-wrap: wrap;
     align-items: center;
     font-weight: 600;
@@ -139,4 +139,16 @@
 }
 #login_google{
     margin-bottom: 1rem;
+}
+.appearPassword{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+}
+.appearPassword > input{
+    width: 2rem;
+    height: 2rem;
+    margin-left: 1rem;
 }
