--- a/src/card/style.css
+++ b/src/card/style.css
@@ -2,6 +2,10 @@
     margin-bottom: 2rem;
     width: 100%;
     position: relative;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    box-shadow: 0 0 0.1rem 0.1rem rgba(0,0,0,0.4);
+    padding-bottom: 0.4rem;
 }
 .card_image_container{
     width: 100%;
