--- a/src/admin/style.css
+++ b/src/admin/style.css
@@ -330,3 +330,150 @@
     border-radius: 2rem;
     padding:0 0.5rem;
 }
+.chapter_wrap{
+    margin-top: 5rem;
+    width: 100%;
+}
+.chapter_title{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.6rem;
+}
+.chapter_form{
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+}
+.chapter_form_container{
+    width: 70%;
+    height: 40rem;
+    overflow-y:scroll;
+    overflow-x: hidden;
+    background-color: white;
+    border:0.1rem solid rgba(0,0,0,0.4);
+    border-radius:1rem;
+    padding:1rem;
+}
+.chapter_form_items{
+    display: flex;
+    justify-content: space-between;
+    height: 5rem;
+    align-items: center;
+    border-bottom: 0.05rem solid rgba(0,0,0,0.4);
+    font-size: 1.8rem;
+    padding:0.5rem;
+}
+.chapter_button > button{
+    margin-left: 1rem;
+    padding:0.5rem 1rem;
+    cursor: pointer;
+}
+.chapter_form_items.active{
+    background-color: #FF8A08;
+    color:white;
+}
+.chapter_Card_container{
+    width: 100%;
+    margin-top: 4rem;
+}
+.chapterCard_wrap{
+    width: 100%;
+    min-height: 5rem;
+    position: relative;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.chapter_image_container_detail{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.chapter_image_container_detail > img{
+    width: 80%;
+}
+.chapterCard_navbar_container{
+    position: absolute;
+    right:-3rem;
+    top:0rem;
+    width: 12rem;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding:1rem;
+}
+.chapterCard_navbar_items{
+    margin-bottom: 2rem;
+}
+.chapterCard_navbar_items > button{
+    padding:0.5rem 1rem;
+    cursor: pointer;
+}
+.chapterCard_navbar_items:last-child{
+    margin-bottom: 0;
+}
+.chapterCard_navbar_items > button:hover{
+    transform: scale(.9);
+}
+.chapter_card_add{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 20rem;
+    margin-bottom: 2rem;
+    background-color: white;
+    border:0.1rem solid black;
+    font-size: 1.9rem;
+}
+.chapter_card_add > img{
+    width: 100%;
+}
+.addImg_container{
+    position: fixed;
+    left:2%;
+    top:25%;
+    width: 20rem;
+    height: 30rem;
+    background-color: white;
+    box-shadow: 0 0 0.5rem 0.5rem black;
+}
+.addImg_wrap{
+    width: 100%;
+    height: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.9rem;
+    cursor: pointer;
+}
+.addImg_button{
+    width: 100%;
+    height: 15%;
+    background-color: #FF8A08;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.addImg_button > button{
+    width: 80%;
+    height: 60%;
+    cursor: pointer;
+}
+.image_disappear{
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+}
+.image_disappear > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
