--- a/src/admin/style.css
+++ b/src/admin/style.css
@@ -477,3 +477,22 @@
     height: 100%;
     object-fit: cover;
 }
+.chatper_button_create{
+    margin:5rem 0;
+    display: flex;
+    justify-content: center;
+}
+.chatper_button_create > button{
+    width: 40%;
+    height: 5rem;
+    background-color: green;
+    color:white;
+    font-size: 1.9rem;
+    border:none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 5rem;
+}
+.chatper_button_create > button:hover{
+    transform: scale(.9);
+}
