--- a/src/comment/style.css
+++ b/src/comment/style.css
@@ -28,6 +28,7 @@
 .comment_card_container{
     display: flex;
     margin-bottom: 2rem;
+    position: relative;
 }
 .comment_card_image{
     margin-top: 0.5rem;
@@ -51,6 +52,7 @@
     border-radius:0.5rem;
     padding:0.7rem;
     padding-bottom: 1.2rem;
+    min-height: 10rem;
 }
 .comment_detail_infor{
     width: auto;
@@ -58,7 +60,6 @@
     align-items: center;
     font-size: 1.3rem;
     padding:0.5rem 0;
-    border-bottom: 0.1rem solid rgba(0,0,0,0.5);
 }
 .comment_detail_infor > h3{
     margin-right: 1rem;
@@ -66,6 +67,12 @@
 }
 .comment_detail_infor > i{
     margin-top: 0.2rem;
+}
+.comment_detail_infor_container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 0.1rem solid rgba(0,0,0,0.5);
 }
 .comment_detail_clearly{
     margin-top: 1rem;
@@ -102,4 +109,57 @@
     outline: none;
     border-radius: 0.5rem;
     resize: vertical;
+}
+.comment_send{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.comment_send_button > button{
+    padding:0.8rem 2.5rem;
+    cursor: pointer;
+    color:white;
+    background-color: #56CCF2;
+    border:0.1rem solid white;
+    border-radius: 0.5rem;
+}
+.comment_send_button > button:hover{
+    transform: scale(1.1);
+}
+.comment_send_button{
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+}
+.comment_edit{
+    margin-right: 0.5rem;
+    font-size: 1.3rem;
+    position: relative;
+}
+.comment_edit_container{
+    position: absolute;
+    top:110%;
+    right:-2rem;
+    width: 9rem;
+    background-color: white;
+    box-shadow:  0 0 0.2rem 0.1rem rgba(0,0,0,0.5);
+    padding:0.5rem;
+    border-radius: 0.4rem;
+}
+.comment_edit_items{
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 0.05rem solid rgba(0,0,0,0.3);
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+.comment_edit_items:last-child{
+    border-bottom: none;
+}
+.comment_edit_items:hover{
+    background-color: rgba(0,0,0,0.1);
 }
