--- a/src/comment/style.css
+++ b/src/comment/style.css
@@ -12,14 +12,9 @@
 }
 .comment_form{
     margin-top: 1rem;
-}
-.comment_form > textarea{
-    width: 100%;
-    height: 8rem;
-    outline: none;
-    padding:0.8rem;
-    resize: vertical;
-    border-radius: 0.5rem;
+    padding:0 1.5rem;
+    margin-bottom: 5rem;
+    position: relative;
 }
 .comment_items{
     margin-top: 1rem;
@@ -104,14 +99,7 @@
     margin-top: 1rem;
     width: 100%;
 }
-.reply_container > textarea{
-    width: 100%;
-    min-height: 8rem;
-    padding:0.7rem;
-    outline: none;
-    border-radius: 0.5rem;
-    resize: vertical;
-}
+
 .comment_send{
     display: flex;
     justify-content: space-between;
@@ -120,7 +108,6 @@
 .reply_container > button{
     width: 7rem;
     height: 3.5rem;
-    margin-top: 0.5rem;
     cursor: pointer;
     float:right;
     background-color: #56CCF2;
@@ -201,4 +188,32 @@
 }
 .update_button_container > button:hover{
     transform: scale(.9);
+}
+#commentContent,
+#commentContentReply{
+    min-height: 10rem;
+    border:0.1rem solid rgba(0,0,0,0.3);
+    padding:1rem;
+    border-radius: 0.5rem;
+    font-size: 1.6rem;
+}
+.comment_title_input{
+    position: absolute;
+    top:1rem;
+    left:2.5rem;
+    font-size: 1.6rem;
+    color:rgba(0,0,0,0.5);
+}
+.comment_form_reply{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    position: relative;
+    padding-left: 1rem;
+}
+.comment_title_input_reply{
+    position: absolute;
+    top:1rem;
+    left:2rem;
+    font-size: 1.6rem;
+    color:rgba(0,0,0,0.5);
 }
