--- a/src/userManager/style.css
+++ b/src/userManager/style.css
@@ -65,7 +65,7 @@
 }
 @media screen and (max-width:1023px) {
     .user_profile{
-        width: 80%;
+        width: 90%;
         overflow:hidden;
     }
     .user_detail_img{
@@ -91,6 +91,9 @@
         justify-content: center;
         font-size: 3rem;
         color:white;
+    }
+    .user_profile_container{
+        padding:0 1rem;
     }
 }
 .user_detail_small_wrap > button{
