--- a/src/admin/style.css
+++ b/src/admin/style.css
@@ -496,3 +496,98 @@
 .chatper_button_create > button:hover{
     transform: scale(.9);
 }
+.report_wrap{
+    margin-top: 5rem;
+}
+.report_title{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+}
+.report_card_container{
+    margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.reportCard_container{
+    margin-bottom: 2rem;
+    position: relative;
+    width: 80%;
+    height: 30rem;
+    background-color: white;
+    box-shadow: 0 0 0.5rem 0.2rem black;
+    border-radius: 1rem;
+    padding:1rem;
+    display: flex;
+    overflow: hidden;
+}
+.reportCard_from{
+    width: 30%;
+    text-align: center;
+    padding:0 1rem;
+}
+.reportCard_from > img{
+    margin-top: 1.5rem;
+    width: 100%;
+    height: 20rem;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+.reportCard_from > span{
+    width: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+}
+.report_icons{
+    width: 20%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    overflow: hidden;
+    flex-wrap: wrap;
+}
+.reportCard_to{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.reportCard_comment{
+    width: 90%;
+    height: 90%;
+    background-color: rgba(0,0,0,0.1);
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding:0.5rem;
+    border-radius: 0.5rem;
+}
+.reportCard_comment_detail{
+    font-size: 1.8rem;
+}
+.report_icons > button{
+    padding:0 0.5rem;
+    height: 3rem;
+    cursor: pointer;
+    color:white;
+    background-color: red;
+    border:none;
+    border-radius: 0.5rem;
+}
+.report_icons > button:hover{
+    transform: scale(0.9);
+}
+.delete_reportCard{
+    position: absolute;
+    top:0.5rem;
+    right:0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:black;
+    font-size: 2rem;
+    cursor: pointer;
+}
