--- a/src/admin/style.css
+++ b/src/admin/style.css
@@ -591,3 +591,52 @@
     font-size: 2rem;
     cursor: pointer;
 }
+.admin_user_manager_wrap{
+    margin-top: 5rem;
+}
+.admin_user_manager_title{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+}
+.admin_user_manager_cards{
+    margin-top: 2rem;
+}
+.userCard_container{
+    width: 100%;
+    height: 20rem;
+    background-color: white;
+    box-shadow: 0 0 0.5rem 0.1rem black;
+    margin-bottom: 2rem;
+    padding:0.5rem;
+    border-radius: 1rem;
+    position: relative;
+}
+.userCard_image{
+    text-align: center;
+}
+.userCard_image > img{
+    width: 10rem;
+    height: 10rem;
+    object-fit: cover;
+    border-radius: 0.4rem;
+    margin-top: 0.5rem;
+}
+.userCard_name{
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 1.8rem;
+}
+.userCard_email{
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 1.6rem;
+    color:rgb(86,204,242)
+}
+.userCard_times{
+    position: absolute;
+    top:0.1rem;
+    right:0.8rem;
+    font-size: 2.5rem;
+    cursor: pointer;
+}
