--- a/src/searchPage/style.css
+++ b/src/searchPage/style.css
@@ -45,3 +45,8 @@
     font-size: 3rem;
     font-weight: 700;
 }
+@media screen and (max-width:1023px){
+    .search_container{
+        padding:0 1rem;
+    }
+}
